2007-11-17 Raphael Neider <rneider AT web.de>

	* src/pic16/genarith.c (pic16_genPlus, pic16_genMinus): take special
	care when left or right operand resides in result, fixes #1830220

2007-11-17 Borut Razem <borut.razem AT siol.net>

	* src/SDCCglue.c, src/pic16/glue.c: reverted fix for bug
	  #983491 - "Merge duplicate strings function is ineffective"
	* support/regression/tests/bug-983491.c: regtest disabled
	* as/asxxsrc: created
	  as/asxxsrc/assym.c, as/asxxsrc/strcmpi.c: moved
	  as/hc08/assym.c, as/mcs51/assym.c, as/strcmpi.c,
	  as/z80/assym.c: deleted
	  as/hc08/Makefile.bcc, as/hc08/Makefile.in, as/hc08/as_hc08.dsp,
	  as/hc08/asm.h, as/link/hc08/Makefile.bcc, as/link/hc08/Makefile.in,
	  as/link/hc08/link_hc08.dsp, as/link/mcs51/Makefile.bcc,
	  as/link/mcs51/Makefile.in, as/link/mcs51/aslink.dsp,
	  as/link/z80/Makefile.in, as/link/z80/linkgbz80.dsp,
	  as/link/z80/linkz80.dsp, as/mcs51/Makefile.bcc, as/mcs51/Makefile.in,
	  as/mcs51/asm.h, as/mcs51/asx8051.dsp, as/z80/Makefile.bcc,
	  as/z80/Makefile.in, as/z80/as_gbz80.dsp, as/z80/as_z80.dsp: modified
	  created as/asxxsrc directory, assym.c and strcpi.c moved into it

2007-11-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/stdarg.h: added and removed some casts
	* src/SDCCsymt.c (compareType): Fully check types between generic and
	  non-generic pointers, also accept ptr-ptr to void-ptr assignments

2007-11-13 Borut Razem <borut.razem AT siol.net>

	* support/regression/tests/bug-1817005.c:
	  added regtest for bug #1817005 - as-z80 chokes on long labels

2007-11-12 Borut Razem <borut.razem AT siol.net>

	* as\z80\asmain.c, as\z80\asm.h, as\z80\assym.c, as\z80\asdata.c,
	  as\z80\asout.c, as\z80\aslist.c:
	  fixed bug #1817005 - as-z80 chokes on long labels

2007-11-11 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/hc08/asmain.c,
	* as/z80/asmain.c: cosmetic changes
	* as/hc08/alloc.h,
	* as/mcs51/alloc.h,
	* as/z80/alloc.h: removed
	* as/hc08/assym.c,